--- a/apps/host/host/src/app/app.component.html
+++ b/apps/host/host/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- <ul class="remote-menu">
   <li><a routerLink="/">Home</a></li>
+<li><a routerLink="contact-us">ContactUs</a></li>
 </ul> -->
 <router-outlet></router-outlet>
