--- a/apps/host/host/src/app/welcome.html
+++ b/apps/host/host/src/app/welcome.html
@@ -17,7 +17,7 @@
           <li><a class="nav-link" href="about.html">About us</a></li>
           <li><a class="nav-link" href="services.html">Services</a></li>
           <li><a class="nav-link" href="blog.html">Blog</a></li>
-          <li><a class="nav-link" href="contact.html">Contact us</a></li>
+          <li><a class="nav-link" routerLink="contact-us">Contact us</a></li>
         </ul>
 
         <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
@@ -472,7 +472,7 @@
                 <li><a href="#">About us</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact us</a></li>
+                <li><a routerLink="contact-us">Contact us</a></li>
               </ul>
             </div>
 
