--- a/libs/shared/navbar/src/lib/components/navbar.component.html
+++ b/libs/shared/navbar/src/lib/components/navbar.component.html
@@ -13,16 +13,15 @@
           <li class="nav-item active">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li><a class="nav-link" href="shop.html">Shop</a></li>
-          <li><a class="nav-link" href="about.html">About us</a></li>
-          <li><a class="nav-link" href="services.html">Services</a></li>
-          <li><a class="nav-link" href="blog.html">Blog</a></li>
-          <li><a class="nav-link" routerLink="contact-us">Contact us</a></li>
+          <li><a class="nav-link" routerLink="shop">Shop</a></li>
+          <li><a class="nav-link" routerLink="about-us">About us</a></li>
+          <li><a class="nav-link" routerLink="services">Services</a></li>
+          <li><a class="nav-link" routerLink="/contact-us">Contact us</a></li>
         </ul>
 
         <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-          <li><a class="nav-link" routerLink="auth"><img src="../assets/images/user.svg"></a></li>
-          <li><a class="nav-link" href="cart.html"><img src="../assets/images/cart.svg"></a></li>
+          <li><a class="nav-link" routerLink="/auth"><img src="../assets/images/user.svg"></a></li>
+          <li><a class="nav-link" routerLink="cart"><img src="../assets/images/cart.svg"></a></li>
         </ul>
       </div>
     </div>
