--- a/libs/shared/navbar/src/lib/components/navbar.component.html
+++ b/libs/shared/navbar/src/lib/components/navbar.component.html
@@ -2,7 +2,7 @@
   <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
 
     <div class="container">
-      <a class="navbar-brand" href="index.html">Furni<span>.</span></a>
+      <a class="navbar-brand" routerLink="">Furni<span>.</span></a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -11,11 +11,11 @@
       <div class="collapse navbar-collapse" id="navbarsFurni">
         <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" routerLink="">Home</a>
           </li>
-          <li><a class="nav-link" routerLink="shop">Shop</a></li>
-          <li><a class="nav-link" routerLink="about-us">About us</a></li>
-          <li><a class="nav-link" routerLink="services">Services</a></li>
+          <li><a class="nav-link" routerLink="/shop">Shop</a></li>
+          <li><a class="nav-link" routerLink="/about-us">About us</a></li>
+          <li><a class="nav-link" routerLink="/services">Services</a></li>
           <li><a class="nav-link" routerLink="/contact-us">Contact us</a></li>
         </ul>
 
