--- a/apps/host/host/src/app/welcome.html
+++ b/apps/host/host/src/app/welcome.html
@@ -1,25 +1,10 @@
 <lib-navbar></lib-navbar>
 
-  <!-- Start Hero Section -->
-    <div class="hero">
-      <div class="container">
-        <div class="row justify-content-between">
-          <div class="col-lg-5">
-            <div class="intro-excerpt">
-              <h1>Modern Interior <span clsas="d-block">Design Studio</span></h1>
-              <p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
-              <p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
-            </div>
-          </div>
-          <div class="col-lg-7">
-            <div class="hero-img-wrap">
-              <img src="../assets/images/couch.png" class="img-fluid">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  <!-- End Hero Section -->
+  <lib-hero-section
+    title_one="Modern Interior"
+    title_two="Design Studio"
+    description="Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique."
+    ></lib-hero-section>
 
   <!-- Start Product Section -->
   <div class="product-section">
