--- a/apps/pages/services/services/src/app/remote-entry/welcome.html
+++ b/apps/pages/services/services/src/app/remote-entry/welcome.html
@@ -3,24 +3,11 @@
   <!-- End Header/Navigation -->
 
   <!-- Start Hero Section -->
-    <div class="hero">
-      <div class="container">
-        <div class="row justify-content-between">
-          <div class="col-lg-5">
-            <div class="intro-excerpt">
-              <h1>Services</h1>
-              <p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
-              <p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
-            </div>
-          </div>
-          <div class="col-lg-7">
-            <div class="hero-img-wrap">
-              <img src="assets/images/couch.png" class="img-fluid">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+  <lib-hero-section
+  title_one="Services"
+  title_two=""
+  description="Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique."
+  ></lib-hero-section>
   <!-- End Hero Section -->
 
 
