--- a/libs/shared/navbar/src/lib/components/navbar.component.html
+++ b/libs/shared/navbar/src/lib/components/navbar.component.html
@@ -10,17 +10,17 @@
 
       <div class="collapse navbar-collapse" id="navbarsFurni">
         <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-          <li class="nav-item active">
-            <a class="nav-link" routerLink="">Home</a>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
           </li>
-          <li><a class="nav-link" routerLink="/shop">Shop</a></li>
-          <li><a class="nav-link" routerLink="/about-us">About us</a></li>
-          <li><a class="nav-link" routerLink="/services">Services</a></li>
-          <li><a class="nav-link" routerLink="/contact-us">Contact us</a></li>
+          <li><a class="nav-link" routerLink="/shop" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Shop</a></li>
+          <li><a class="nav-link" routerLink="/about-us" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">About us</a></li>
+          <li><a class="nav-link" routerLink="/services" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Services</a></li>
+          <li><a class="nav-link" routerLink="/contact-us" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Contact us</a></li>
         </ul>
 
         <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-          <li><a class="nav-link" routerLink="/auth"><img src="../assets/images/user.svg"></a></li>
+          <li><a class="nav-link" routerLink="/auth" ><img src="../assets/images/user.svg"></a></li>
           <li><a class="nav-link" routerLink="cart"><img src="../assets/images/cart.svg"></a></li>
         </ul>
       </div>
