add btn component

--- a/apps/pages/auth/auth/src/app/remote-entry/login/login.component.html
+++ b/apps/pages/auth/auth/src/app/remote-entry/login/login.component.html
@@ -21,7 +21,9 @@
 								<!-- <textarea name="" class="form-control" id="message" cols="30" rows="5"></textarea> -->
 							</div>
 
-							<button type="submit" class="btn btn-primary-hover-outline">Login</button>&nbsp;
+							<!-- <button type="submit" class="btn btn-primary-hover-outline">Login</button> -->
+              <lib-button label="Login"></lib-button>
+              &nbsp;
               or &nbsp;<a routerLink="/auth/signup">Register</a>
 						</form>
 					</div>
