--- a/apps/pages/auth/auth/src/app/remote-entry/login/login.component.html
+++ b/apps/pages/auth/auth/src/app/remote-entry/login/login.component.html
@@ -5,12 +5,13 @@
 	<!-- Start Contact Form -->
 	<div class="untree_co-section">
 		<div class="container">
+      isLoggIn: {{isLoggedIn}}
 
 			<div class="block">
 				<div class="row justify-content-center">
 					<div class="col-md-6 col-lg-4 pb-4">
 
-						<form>
+						<div>
 							<div class="form-group mb-3">
 								<label class="text-black" for="email">Email address</label>
 								<input type="email" class="form-control" id="email">
@@ -22,10 +23,12 @@
 							</div>
 
 							<!-- <button type="submit" class="btn btn-primary-hover-outline">Login</button> -->
-              <lib-button label="Login"></lib-button>
+              <lib-button type="button" label="Login" (click)="simulateLogin()"></lib-button>
+              <lib-button label="Logout" (click)="simulateLogout()"></lib-button>
+
               &nbsp;
               or &nbsp;<a routerLink="/auth/signup">Register</a>
-						</form>
+						</div>
 					</div>
 				</div>
 			</div>
